manifests/bootstrapping/04-traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: primary-ip
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.robotwizard.co.uk
spec:
  type: ExternalName
  externalName: 168.119.230.133
